--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1> Users </h1>
 <% @users.each do |user| %>
-    <%= user.username %>
-    <%= user.email %><br><br>
+    <%= link_to user.username, user %><br>
 <% end %>
+
+ <%= link_to 'New User', new_user_path %>
+
