--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,7 +22,7 @@
     <%= submit_tag "Save" %>
 <% end %> --!>
 
-
+<h1> New User </h1>
 <% if @user.errors.any? %>
   <%= @user.errors.full_messages %>
 <% end %>
